gitops/security/network-policies/observability-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: observability
spec:
  podSelector: {}
  policyTypes:
    - Ingress
